--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,6 +14,7 @@ alembic = "^1.13.1"
 psycopg = "^3.1.16"
 asyncpg = "^0.29.0"
 postgres = "^4.0"
+python-dotenv = "^1.0.0"
 
 [build-system]
 requires = ["poetry-core"]
