--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,6 +15,8 @@ psycopg = "^3.1.16"
 asyncpg = "^0.29.0"
 postgres = "^4.0"
 python-dotenv = "^1.0.0"
+pydantic = "^2.5.3"
+passlib = {extras = ["bcrypt"], version = "^1.7.4"}
 
 [build-system]
 requires = ["poetry-core"]
